--- a/static/styles.css
+++ b/static/styles.css
@@ -1,3 +1,9 @@
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+   
+}
 body {
     color: #566787;
     background: #f5f5f5;
@@ -96,47 +102,42 @@ table.table td i {
     font-size: 19px;
 }
 
+/* Estilo para las tarjetas de imagen */
+.card {
+    margin-bottom: 20px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    transition: transform 0.3s;
+}
+
+.card:hover {
+    transform: translateY(-5px);
+}
+
+/* Estilo para la paginación */
 .pagination {
-    float: right;
-    margin: 0 0 5px;
+    margin-top: 20px;
 }
 
-.pagination li a {
-    border: none;
-    font-size: 95%;
-    width: 30px;
-    height: 30px;
-    color: #999;
-    margin: 0 2px;
-    line-height: 30px;
-    border-radius: 30px !important;
-    text-align: center;
-    padding: 0;
+.pagination .page-link {
+    color: #333;
+    transition: background-color 0.3s, color 0.3s;
 }
 
-.pagination li a:hover {
-    color: #666;
+.pagination .page-link:hover {
+    background-color: #f2f2f2;
+    color: #007bff;
 }
 
-.pagination li.active a {
-    background: #03A9F4;
+.pagination .page-item.active .page-link {
+    background-color: #007bff;
+    border-color: #007bff;
 }
 
-.pagination li.active a:hover {
-    background: #0397d6;
+.pagination .page-link:focus {
+    box-shadow: none;
 }
 
-.pagination li.disabled i {
-    color: #ccc;
-}
-
-.pagination li i {
-    font-size: 16px;
-    padding-top: 6px
-}
-
-.hint-text {
-    float: left;
-    margin-top: 6px;
-    font-size: 95%;
+.pagination .disabled .page-link {
+    pointer-events: none;
+    cursor: not-allowed;
 }
